--- a/android/src/main/res/layout/fingerprint_dialog.xml
+++ b/android/src/main/res/layout/fingerprint_dialog.xml
@@ -5,75 +5,79 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:weightSum="1">
+    android:weightSum="1"
+    android:background="@drawable/rounded_corners">
 
     <!-- https://medium.com/@chrisbanes/appcompat-v23-2-age-of-the-vectors-91cbafa87c88#.btn3al2l2 appCompat works if app is srcCompat 7 activity-->
     <!-- app:srcCompat="@drawable/ic_fp_40px" -->
-
-    <TextView
-        android:id="@+id/fingerprint_description"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp"
-        android:layout_marginTop="10dp"
-        android:gravity="left"
-        android:text="TextView"
-        android:textColor="#696969"
-        android:textSize="17dp" />
-
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:orientation="horizontal"
-        android:paddingBottom="25dp"
-        android:paddingRight="20dp"
-        android:paddingTop="25dp">
+        android:orientation="vertical"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="15dp"
+        android:paddingHorizontal="11dp"
+        >
 
         <ImageView
             android:id="@+id/fingerprint_icon"
-            android:layout_width="65dp"
-            android:layout_height="65dp"
-            android:layout_marginLeft="25dp"
-            android:gravity="left"
-            android:src="@drawable/ic_fp_40px" />
+            android:layout_width="56sp"
+            android:layout_height="56sp"
+            android:gravity="center"
+            android:src="@drawable/associate_fingerprint" />
 
         <TextView
-            android:id="@+id/fingerprint_sensor_description"
+            android:id="@+id/fingerprint_sensor_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:gravity="left|center_vertical"
-            android:text="Touch sensor"
-            android:textColor="#696969"
-            android:textSize="15dp" />
+            android:layout_marginVertical="15dp"
+            android:gravity="center"
+            android:text="Touch ID"
+            android:textColor="#000000"
+            android:textSize="15dp"
+            android:fontFamily="@font/montserrat_semi_bold"
+            />
+
+        <TextView
+            android:id="@+id/fingerprint_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Associez votre empreinte digitale à votre compte Client Pro"
+            android:textColor="#757575"
+            android:textSize="13dp"
+            android:fontFamily="@font/montserrat_medium"/>
     </LinearLayout>
 
     <TextView
         android:id="@+id/fingerprint_error"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp"
         android:layout_marginBottom="10dp"
+        android:paddingHorizontal="11dp"
         android:gravity="center"
         android:text="TextView"
-        android:textColor="#F00"
-        android:textSize="15dp" />
+        android:textColor="#FF1E64"
+        android:visibility="gone"
+        android:textSize="13dp"
+        android:fontFamily="@font/montserrat_medium"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#EFEFEF"/>
 
     <Button
         android:id="@+id/cancel_button"
-        style="?android:attr/buttonBarButtonStyle"
-        android:layout_width="wrap_content"
+        style="?android:attr/borderlessButtonStyle"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|right"
-        android:paddingRight="15dp"
-        android:paddingLeft="15dp"
-        android:layout_marginEnd="10dp"
-        android:background="#fff"
         android:text="Cancel"
-        android:textColor="#696969" />
+        android:textColor="#007DFF"
+        android:background="@drawable/rounded_corners"
+        android:fontFamily="@font/montserrat_medium"
+        />
 
 </LinearLayout>
