--- a/android/src/main/res/layout/fingerprint_dialog.xml
+++ b/android/src/main/res/layout/fingerprint_dialog.xml
@@ -75,6 +75,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Cancel"
+        android:textAllCaps="false"
         android:textColor="#007DFF"
         android:background="@drawable/rounded_corners"
         android:fontFamily="@font/montserrat_medium"
